--- a/dude-graph.html
+++ b/dude-graph.html
@@ -72,7 +72,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                                   on-dude-panel-close="_resetPanel">
                     </dude-sidebar>
                     <dude-sidebar id="editBlockPanel"
-                                  panel-title="{{ _selectedRenderBlock.block.cgName }}"
+                                  panel-title="{{ _selectedRenderBlock.block.blockName }}"
                                   panel-element="dude-graph-edit-block"
                                   data="{{ _selectedRenderBlock }}"
                                   on-dude-panel-close="_resetPanel">
