Fixed variable creation with new API.

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -226,16 +226,16 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                         "name": name,
                         "icon": "fa fa-circle",
                         "data": {
-                            "cgType": "Variable",
-                            "cgValueType": type,
-                            "cgValue": value,
-                            "cgName": name,
-                            "cgInputs": [],
-                            "cgOutputs": [
+                            "blockType": "Variable",
+                            "blockValueType": type,
+                            "blockValue": value,
+                            "blockName": name,
+                            "blockInputs": [],
+                            "blockOutputs": [
                                 {
-                                    "cgType": "Point",
-                                    "cgValueType": type,
-                                    "cgName": "value"
+                                    "pointType": "Point",
+                                    "pointValueType": type,
+                                    "pointName": "value"
                                 }
                             ]
                         }
