--- a/demo/index.html
+++ b/demo/index.html
@@ -8,9 +8,9 @@
     <!-- firefox didn't for without adding this links in the index -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" type="text/css">
     <link rel="import" href="../bower_components/dude-style/dude-style.html">
-    <link rel="import" href="dude/demo-dude.html">
+    <link rel="import" href="audigame/audigame.html">
 </head>
 <body class="fullbleed">
-    <demo-dude></demo-dude>
+    <demo-audigame></demo-audigame>
 </body>
 </html>
