--- a/dude-graph.html
+++ b/dude-graph.html
@@ -104,6 +104,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                                        block-types="[[ blockTypes ]]"
                                        point-types="[[ pointTypes ]]"
                                        render-block-types="[[ renderBlockTypes ]]"
+                                       render-point-types="[[ renderPointTypes ]]"
                                        on-dude-graph-editor-error="_error">
                     </dude-graph-editor>
                 </div>
@@ -161,6 +162,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 "renderBlockTypes": {
                     "type": Array,
                     "value": dudeGraph.defaultRenderBlocks
+                },
+
+                /**
+                 *
+                 */
+                "renderPointTypes": {
+                    "type": Array,
+                    "value": dudeGraph.defaultRenderPoints
                 },
 
                 /**
